--- a/index.html
+++ b/index.html
@@ -31,6 +31,24 @@
 
     </header>
 
+    <main>
+
+        <!--ACTION SECTION-->
+    <section class="action">
+        <div class="action-text">
+            <h2 class="section-heading raleway-font">See It in Action</h2>
+            <p class="section-subheading">Explore the live preview and imagine your <br> brand in the bold new look</p>
+            <button>Launch Live Preview</button>
+
+        </div>
+        <img src="./Assets/wc-mini.png" alt="">
+    </section>
+
+
+
+
+    </main>
+
 
     
 </body>
