get in touch section

--- a/index.html
+++ b/index.html
@@ -140,7 +140,32 @@
     </section>
 
 
+        <!--GET IN TOUCH-->
+
+        <section class="in-touch">
+            <h1 class="raleway-font">Let's Get in Touch</h1>
+            <form class="inter-font"  action="">
+                <label for="email">Email</label>
+                <input type="email" name="" id="email"  placeholder="example@email.com">
+
+                <label for="name">Name</label>
+                <input type="text" name="" id="name" placeholder="full name">
+                
+
+                 <label for="name">Message</label>
+                <textarea cols="50" rows="5" name="message" id="" placeholder="write your message"></textarea>
+
+                <button class="raleway-font">Get in Touch</button>
+
+            </form>
+        </section>
     </main>
+
+
+
+    
+ 
+
 
 
 
