--- a/index.html
+++ b/index.html
@@ -162,9 +162,20 @@
     </main>
 
 
-
+    <!--FOOTER-->
     
- 
+    <footer>
+
+        <h1 class="inter-font">LOGO</h1>
+        <p class="inter-font">Ready to elevate your online presence? Contact us today to discuss <br> your project and discover how we can bring your vision to life.</p>
+        <ul class="inter-font">
+            <li><a href="">Home</a></li>
+            <li><a href="">About</a></li>
+            <li><a href="">How it Works</a></li>
+            <li><a href="">Services</a></li>
+        </ul>
+
+    </footer>
 
 
 
