--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
     <header>
         <div class="nav">
-            <h1 class="inter-font">LOGO</h1>
+            <h1 class="inter-font">LANDING</h1>
             <button class="raleway-font">Sign Up</button>
         </div>
         <div class="banner raleway-font ">
@@ -167,13 +167,13 @@
     
     <footer>
 
-        <h1 class="inter-font">LOGO</h1>
+        <h1 class="inter-font">LANDING</h1>
         <p class="inter-font">Ready to elevate your online presence? Contact us today to discuss <br> your project and discover how we can bring your vision to life.</p>
         <ul class="inter-font">
-            <li><a href="">Home</a></li>
-            <li><a href="">About</a></li>
-            <li><a href="">How it Works</a></li>
-            <li><a href="">Services</a></li>
+            <li><a href="www.abcd.html">Home</a></li>
+            <li><a href="www.abcd.html">About</a></li>
+            <li><a href="www.abcd.html">How it Works</a></li>
+            <li><a href="www.abcd.html">Services</a></li>
         </ul>
 
     </footer>    
